--- a/envs/monsda.yaml
+++ b/envs/monsda.yaml
@@ -14,118 +14,119 @@ dependencies:
   - alsa-lib=1.2.3
   - amply=0.1.4
   - appdirs=1.4.4
-  - async-timeout=4.0.1
+  - async-timeout=4.0.2
   - atk-1.0=2.36.0
   - attmap=0.13.2
-  - attrs=21.2.0
-  - azure-common=1.1.27
-  - azure-core=1.14.0
+  - attrs=21.4.0
+  - azure-common=1.1.28
+  - azure-core=1.22.1
   - azure-storage-blob=12.9.0
   - babel=2.9.1
   - backports=1.0
   - backports.functools_lru_cache=1.6.4
   - bcrypt=3.2.0
   - biopython=1.79
-  - black=21.11b0
+  - black=22.1.0
   - bleach=4.1.0
   - blinker=1.4
   - boto=2.49.0
-  - boto3=1.20.13
-  - botocore=1.23.13
+  - boto3=1.21.3
+  - botocore=1.24.3
   - brotli=1.0.9
   - brotli-bin=1.0.9
   - brotlipy=0.7.0
   - bzip2=1.0.8
   - c-ares=1.18.1
   - ca-certificates=2021.10.8
-  - cachetools=4.2.4
+  - cachetools=5.0.0
   - cairo=1.16.0
   - certifi=2021.10.8
   - cffi=1.15.0
   - chardet=4.0.0
-  - charset-normalizer=2.0.8
-  - click=8.0.3
-  - cmarkgfm=0.6.0
+  - charset-normalizer=2.0.12
+  - click=8.0.4
+  - cmarkgfm=0.7.0
   - coincbc=2.10.5
   - colorama=0.4.4
   - conda=4.11.0
   - conda-package-handling=1.7.3
   - configargparse=1.5.3
   - connection_pool=0.0.3
-  - coreutils=8.32
+  - coreutils=9.0
   - crc32c=2.2.post0
-  - cryptography=35.0.0
-  - curl=7.80.0
+  - cryptography=36.0.1
+  - curl=7.81.0
   - cycler=0.11.0
   - dataclasses=0.8
   - datrie=0.8.2
   - dbus=1.13.18
-  - decorator=5.1.0
+  - decorator=5.1.1
+  - defusedxml=0.7.1
   - docutils=0.17.1
-  - dropbox=11.25.0
-  - expat=2.4.1
+  - dropbox=11.27.0
+  - expat=2.4.4
   - fftw=3.3.10
   - filechunkio=1.8
-  - filelock=3.4.0
+  - filelock=3.6.0
   - flake8=4.0.1
   - font-ttf-dejavu-sans-mono=2.37
   - font-ttf-inconsolata=3.000
   - font-ttf-source-code-pro=2.038
   - font-ttf-ubuntu=0.83
-  - fontconfig=2.13.1
+  - fontconfig=2.13.96
   - fonts-conda-ecosystem=1
   - fonts-conda-forge=1
-  - fonttools=4.28.2
+  - fonttools=4.29.1
   - freetype=2.10.4
   - fribidi=1.0.10
-  - frozenlist=1.2.0
-  - ftputil=5.0.2
+  - frozenlist=1.3.0
+  - ftputil=5.0.3
   - gdk-pixbuf=2.42.6
   - gettext=0.21.0
   - ghostscript=9.54.0
   - giflib=5.2.1
   - gitdb=4.0.7
-  - gitpython=3.1.24
-  - glib=2.70.1
-  - glib-tools=2.70.1
-  - google-api-core=2.2.2
-  - google-api-python-client=2.31.0
-  - google-auth=2.3.3
+  - gitpython=3.1.26
+  - glib=2.70.2
+  - glib-tools=2.70.2
+  - google-api-core=2.5.0
+  - google-api-python-client=2.37.0
+  - google-auth=2.6.0
   - google-auth-httplib2=0.1.0
-  - google-cloud-core=2.2.1
-  - google-cloud-storage=1.42.3
+  - google-cloud-core=2.2.2
+  - google-cloud-storage=2.1.0
   - google-crc32c=1.1.2
   - google-resumable-media=2.1.0
-  - googleapis-common-protos=1.53.0
+  - googleapis-common-protos=1.54.0
   - graphite2=1.3.14
-  - graphviz=2.49.3
+  - graphviz=2.50.0
   - grep=3.4
-  - grpcio=1.42.0
+  - grpcio=1.44.0
   - gst-plugins-base=1.18.5
   - gstreamer=1.18.5
   - gtk2=2.24.33
   - gts=0.7.6
   - harfbuzz=2.9.1
-  - httplib2=0.20.2
+  - httplib2=0.20.4
   - icu=68.2
-  - idna=3.1
-  - imagemagick=7.1.0_16
+  - idna=3.3
+  - imagemagick=7.1.0_25
   - imagesize=1.3.0
-  - importlib-metadata=4.8.2
-  - importlib_metadata=4.8.2
+  - importlib-metadata=4.11.1
+  - importlib_metadata=4.11.1
   - importlib_resources=5.4.0
   - iniconfig=1.1.1
   - ipython_genutils=0.2.0
-  - isodate=0.6.0
+  - isodate=0.6.1
   - isort=5.10.1
   - jbig=2.1
   - jeepney=0.7.1
   - jinja2=3.0.3
   - jmespath=0.10.0
-  - jpeg=9d
-  - jsonschema=4.2.1
-  - jupyter_core=4.9.1
-  - keyring=23.3.0
+  - jpeg=9e
+  - jsonschema=4.4.0
+  - jupyter_core=4.9.2
+  - keyring=23.4.0
   - kiwisolver=1.3.2
   - krb5=1.19.2
   - lcms2=2.12
@@ -140,9 +141,9 @@ dependencies:
   - libclang=11.1.0
   - libcrc32c=1.1.2
   - libcroco=0.6.13
-  - libcurl=7.80.0
-  - libdeflate=1.8
-  - libedit=3.1.20210714
+  - libcurl=7.81.0
+  - libdeflate=1.10
+  - libedit=3.1.20210910
   - libev=4.33
   - libevent=2.1.10
   - libffi=3.4.2
@@ -150,21 +151,22 @@ dependencies:
   - libgd=2.3.3
   - libgfortran-ng=11.2.0
   - libgfortran5=11.2.0
-  - libglib=2.70.1
+  - libglib=2.70.2
   - libgomp=11.2.0
   - libiconv=1.16
   - liblapack=3.9.0
   - libllvm11=11.1.0
-  - libmamba=0.18.2
-  - libmambapy=0.18.2
-  - libnghttp2=1.43.0
+  - libmamba=0.21.2
+  - libmambapy=0.21.2
+  - libnghttp2=1.46.0
+  - libnsl=2.0.0
   - libogg=1.3.5
   - libopenblas=0.3.18
   - libopus=1.3.1
   - libpng=1.6.37
   - libpq=13.5
-  - libprotobuf=3.19.1
-  - librsvg=2.52.4
+  - libprotobuf=3.19.4
+  - librsvg=2.52.5
   - libsodium=1.0.18
   - libsolv=0.7.19
   - libssh2=1.10.0
@@ -173,8 +175,8 @@ dependencies:
   - libtool=2.4.6
   - libuuid=2.32.1
   - libvorbis=1.3.7
-  - libwebp=1.2.1
-  - libwebp-base=1.2.1
+  - libwebp=1.2.2
+  - libwebp-base=1.2.2
   - libxcb=1.14
   - libxkbcommon=1.0.3
   - libxml2=2.9.12
@@ -182,38 +184,38 @@ dependencies:
   - logmuse=0.2.6
   - lz4-c=1.9.3
   - lzo=2.10
-  - mamba=0.18.2
-  - markupsafe=2.0.1
-  - matplotlib=3.5.0
-  - matplotlib-base=3.5.0
+  - mamba=0.21.2
+  - markupsafe=2.1.0
+  - matplotlib=3.5.1
+  - matplotlib-base=3.5.1
   - mccabe=0.6.1
   - more-itertools=8.12.0
   - mpi=1.0
-  - mpich=3.4.2
+  - mpich=3.4.3
   - msrest=0.6.21
-  - multidict=5.2.0
+  - multidict=6.0.2
   - munkres=1.1.4
   - mypy_extensions=0.4.3
-  - mysql-common=8.0.27
-  - mysql-libs=8.0.27
-  - natsort=8.0.0
+  - mysql-common=8.0.28
+  - mysql-libs=8.0.28
+  - natsort=8.1.0
   - nbformat=5.1.3
-  - ncurses=6.2
+  - ncurses=6.3
   - networkx=2.6.3
-  - nextflow=21.10.0
+  - nextflow=21.10.6
   - nspr=4.32
-  - nss=3.72
-  - numpy=1.21.4
+  - nss=3.74
+  - numpy=1.22.2
   - oauth2client=4.1.3
-  - oauthlib=3.1.1
+  - oauthlib=3.2.0
   - olefile=0.46
   - openjdk=11.0.9.1
   - openjpeg=2.4.0
   - openssl=1.1.1l
   - packaging=21.3
-  - pandas=1.3.4
+  - pandas=1.4.1
   - pango=1.48.10
-  - paramiko=2.8.0
+  - paramiko=2.9.2
   - pathspec=0.9.0
   - pcre=8.45
   - peppy=0.31.2
@@ -221,15 +223,15 @@ dependencies:
   - pillow=8.4.0
   - pixman=0.40.0
   - pkg-config=0.29.2
-  - pkginfo=1.8.1
-  - platformdirs=2.3.0
+  - pkginfo=1.8.2
+  - platformdirs=2.5.0
   - pluggy=1.0.0
   - ply=3.11
-  - prettytable=2.4.0
-  - protobuf=3.19.1
-  - psutil=5.8.0
+  - prettytable=3.1.1
+  - protobuf=3.19.4
+  - psutil=5.9.0
   - pthread-stubs=0.4
-  - pulp=2.5.1
+  - pulp=2.6.0
   - py=1.11.0
   - pyasn1=0.4.8
   - pyasn1-modules=0.2.8
@@ -238,24 +240,24 @@ dependencies:
   - pycosat=0.6.3
   - pycparser=2.21
   - pyflakes=2.4.0
-  - pygments=2.10.0
-  - pygraphviz=1.7
+  - pygments=2.11.2
+  - pygraphviz=1.9
   - pyjwt=2.3.0
-  - pynacl=1.4.0
-  - pyopenssl=21.0.0
-  - pyparsing=3.0.6
+  - pynacl=1.5.0
+  - pyopenssl=22.0.0
+  - pyparsing=3.0.7
   - pyqt=5.12.3
   - pyqt-impl=5.12.3
   - pyqt5-sip=4.19.18
   - pyqtchart=5.12
   - pyqtwebengine=5.12.1
-  - pyrsistent=0.18.0
+  - pyrsistent=0.18.1
   - pysftp=0.2.9
   - pysocks=1.7.1
-  - pytest=6.2.5
-  - python=3.9.7
+  - pytest=7.0.1
+  - python=3.9.10
   - python-dateutil=2.8.2
-  - python-irodsclient=1.0.0
+  - python-irodsclient=1.1.1
   - python_abi=3.9
   - pytz=2021.3
   - pyu2f=0.1.5
@@ -264,28 +266,28 @@ dependencies:
   - ratelimiter=1.2.0
   - readline=8.1
   - readme_renderer=27.0
-  - regex=2021.11.10
+  - regex=2022.1.18
   - reproc=14.2.3
   - reproc-cpp=14.2.3
-  - requests=2.26.0
-  - requests-oauthlib=1.3.0
+  - requests=2.27.1
+  - requests-oauthlib=1.3.1
   - requests-toolbelt=0.9.1
-  - rfc3986=1.5.0
+  - rfc3986=2.0.0
   - rsa=4.8
   - ruamel_yaml=0.15.80
-  - s3transfer=0.5.0
-  - scipy=1.7.3
+  - s3transfer=0.5.1
+  - scipy=1.8.0
   - secretstorage=3.3.1
-  - setuptools=59.2.0
+  - setuptools=60.9.3
   - simplejson=3.17.6
   - six=1.16.0
   - slacker=0.14.0
   - smart_open=5.2.1
   - smmap=5.0.0
-  - snakemake=6.11.0
-  - snakemake-minimal=6.11.0
+  - snakemake=6.15.5
+  - snakemake-minimal=6.15.5
   - snowballstemmer=2.2.0
-  - sphinx=4.3.0
+  - sphinx=4.4.0
   - sphinx_rtd_theme=1.0.0
   - sphinxcontrib-applehelp=1.0.2
   - sphinxcontrib-devhelp=1.0.2
@@ -293,30 +295,31 @@ dependencies:
   - sphinxcontrib-jsmath=1.0.1
   - sphinxcontrib-qthelp=1.0.3
   - sphinxcontrib-serializinghtml=1.1.5
-  - sqlite=3.36.0
-  - stone=3.2.1
+  - sqlite=3.37.0
+  - stone=3.3.1
   - stopit=1.1.2
   - tabulate=0.8.9
-  - tk=8.6.11
+  - tk=8.6.12
   - toml=0.10.2
-  - tomli=1.2.2
+  - tomli=2.0.1
   - toposort=1.7
   - tornado=6.1
   - tqdm=4.62.3
   - traitlets=5.1.1
-  - twine=3.6.0
-  - typed-ast=1.5.0
-  - typing-extensions=4.0.0
-  - typing_extensions=4.0.0
+  - twine=3.8.0
+  - typed-ast=1.5.2
+  - typing-extensions=4.1.1
+  - typing_extensions=4.1.1
   - tzdata=2021e
   - ubiquerg=0.6.1
-  - uritemplate=3.0.1
-  - urllib3=1.26.7
+  - unicodedata2=14.0.0
+  - uritemplate=4.1.1
+  - urllib3=1.26.8
   - veracitools=0.1.3
   - versioneer=0.21
   - wcwidth=0.2.5
   - webencodings=0.5.1
-  - wheel=0.37.0
+  - wheel=0.37.1
   - wrapt=1.13.3
   - xmlrunner=1.7.7
   - xorg-fixesproto=5.0
@@ -341,7 +344,18 @@ dependencies:
   - yaml=0.2.5
   - yaml-cpp=0.6.3
   - yarl=1.7.2
-  - zipp=3.6.0
+  - zipp=3.7.0
   - zlib=1.2.11
-  - zstd=1.5.0
-  - pip==21.3
+  - zstd=1.5.2
+  - pip:
+    - dnspython==1.16.0
+    - docopt==0.6.2
+    - fett==0.3.2
+    - monsda==0.0.30
+    - pip==21.3
+    - pymongo==3.11.4
+    - python-jsonrpc-server==0.3.4
+    - snooty-lextudio==1.11.4.dev0
+    - ujson==1.35
+    - watchdog==1.0.2
+prefix: /home/fall/anaconda3/envs/monsda
