--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,13 @@
     "python.testing.unittestEnabled": false,
     "python.testing.nosetestsEnabled": false,
     "python.testing.pytestEnabled": true,
-    "restructuredtext.confPath": "${workspaceFolder}/docs",
     "esbonio.server.enabled": true,
-    "esbonio.sphinx.confDir": "/home/fall/MONSDA/docs"
+    "esbonio.sphinx.confDir": "${workspaceFolder}/docs",
+    //"restructuredtext.linter.disabledLinters": [
+    //    "doc8"
+    //],
+    "restructuredtext.linter.run": "onSave",
+    "restructuredtext.linter.doc8.extraArgs": [
+        "--ignore D001"
+    ]    
 }
