--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
-biopython >= 1.78
-snakemake >= 6.5.3
-black >= 21.5b2
-flake8 >= 3.8.3
-isort >= 5.9.2
-sphinx >= 4.1.0
+--index-url https://pypi.python.org/simple/
+
+-e .
+
