--- a/envs/sra.yaml
+++ b/envs/sra.yaml
@@ -10,7 +10,7 @@ dependencies:
   - c-ares=1.18.1
   - ca-certificates=2022.3.29
   - curl=7.82.0
-  - hdf5=1.10.6
+  - hdf5=1.10.5
   - icu=70.1
   - keyutils=1.6.1
   - krb5=1.19.3
@@ -30,40 +30,42 @@ dependencies:
   - libzlib=1.2.11
   - ncbi-ngs-sdk=2.11.2
   - ncurses=6.3
-  - openssl=1.1.1n
+  - openssl=3.0.2
   - ossuuid=1.6.2
-  - perl=5.32.1
-  - perl-alien-build=2.48
-  - perl-alien-libxml2=0.17
-  - perl-business-isbn=3.007
-  - perl-business-isbn-data=20210112.006
+  - perl=5.26.2
+  - perl-app-cpanminus=1.7044
+  - perl-business-isbn=3.004
+  - perl-business-isbn-data=20140910.003
   - perl-capture-tiny=0.48
-  - perl-carp=1.50
+  - perl-carp=1.38
   - perl-constant=1.33
-  - perl-data-dumper=2.183
-  - perl-encode=3.17
-  - perl-exporter=5.74
-  - perl-extutils-makemaker=7.64
-  - perl-ffi-checklib=0.28
+  - perl-data-dumper=2.173
+  - perl-encode=2.88
+  - perl-exporter=5.72
+  - perl-extutils-makemaker=7.36
   - perl-file-chdir=0.1010
-  - perl-file-path=2.18
+  - perl-file-path=2.16
   - perl-file-temp=0.2304
-  - perl-file-which=1.24
-  - perl-importer=0.026
-  - perl-mime-base64=3.16
-  - perl-parent=0.238
-  - perl-path-tiny=0.122
+  - perl-file-which=1.23
+  - perl-importer=0.025
+  - perl-mime-base64=3.15
+  - perl-module-pluggable=5.2
+  - perl-parent=0.236
+  - perl-path-tiny=0.108
   - perl-pathtools=3.75
   - perl-scope-guard=0.21
   - perl-sub-info=0.002
-  - perl-term-table=0.016
-  - perl-test2-suite=0.000145
+  - perl-term-table=0.013
+  - perl-test2-suite=0.000117
   - perl-threaded=5.32.1
-  - perl-uri=5.10
-  - perl-xml-libxml=2.0207
+  - perl-time-hires=1.9760
+  - perl-uri=1.76
+  - perl-xml-libxml=2.0132
   - perl-xml-namespacesupport=1.12
   - perl-xml-sax=1.02
   - perl-xml-sax-base=1.09
-  - sra-tools=2.11.0
+  - perl-xsloader=0.24
+  - rename=1.601
+  - sra-tools=2.10.9
   - xz=5.2.5
   - zlib=1.2.11
