--- a/envs/scyphy.yaml
+++ b/envs/scyphy.yaml
@@ -5,47 +5,33 @@ channels:
   - defaults
   - r
 dependencies:
-  - _libgcc_mutex=0.1
-  - _openmp_mutex=4.5
-  - bamtools=2.5.1
   - bzip2=1.0.8
-  - c-ares=1.17.1
-  - ca-certificates=2021.5.30
-  - certifi=2021.5.30
-  - gsl=2.4
-  - htslib=1.12
-  - krb5=1.19.1
-  - ld_impl_linux-64=2.35.1
+  - htslib=1.15.1
   - libblas=3.9.0
   - libcblas=3.9.0
-  - libcurl=7.77.0
-  - libdeflate=1.7
-  - libedit=3.1.20210216
+  - libcurl=7.83.0
+  - libdeflate=1.10
+  - libedit=3.1.20210910
   - libev=4.33
-  - libffi=3.3
-  - libgcc-ng=9.3.0
-  - libgfortran-ng=9.3.0
-  - libgfortran5=9.3.0
-  - libgomp=9.3.0
-  - libnghttp2=1.43.0
-  - libopenblas=0.3.15
-  - libssh2=1.9.0
-  - libstdcxx-ng=9.3.0
-  - ncurses=6.2
-  - openssl=1.1.1k
-  - pip=21.1.2
-  - piranha=1.2.1
-  - pyfaidx=0.5.9.5
-  - pysam=0.16.0.1
-  - python=3.9.5
+  - libffi=3.4.2
+  - libgcc-ng=11.2.0
+  - libgfortran-ng=11.2.0
+  - libgfortran5=11.2.0
+  - libgomp=11.2.0
+  - libnghttp2=1.47.0
+  - libnsl=2.0.0
+  - libopenblas=0.3.20
+  - libssh2=1.10.0
+  - libstdcxx-ng=11.2.0
+  - libuuid=2.32.1
+  - libzlib=1.2.11
+  - pyfaidx=0.6.4
+  - pysam=0.19.0
+  - python=3.9.12
   - python_abi=3.9
   - readline=8.1
-  - samtools=1.12
-  - setuptools=52.0.0
-  - six=1.16.0
-  - sqlite=3.35.5
-  - tk=8.6.10
-  - tzdata=2021a
-  - wheel=0.36.2
-  - xz=5.2.5
+  - samtools=1.15.1
+  - setuptools=62.1.0
+  - wheel=0.37.1
   - zlib=1.2.11
+
