--- a/envs/scyphy.yaml
+++ b/envs/scyphy.yaml
@@ -25,6 +25,7 @@ dependencies:
   - libstdcxx-ng=11.2.0
   - libuuid=2.32.1
   - libzlib=1.2.11
+  - piranha=1.2.1
   - pyfaidx=0.6.4
   - pysam=0.19.0
   - python=3.9.12
