--- a/envs/monsda.yaml
+++ b/envs/monsda.yaml
@@ -17,5 +17,6 @@ dependencies:
   - python-fastjsonschema=2.15.3
   - python-irodsclient=1.1.3
   - python_abi=3.9
+  - pyopenssl>=22.0
   - pyyaml=6.0
   - snakemake-minimal=7.14.2
