--- a/envs/LoveSonesonPatro.yaml
+++ b/envs/LoveSonesonPatro.yaml
@@ -131,5 +131,5 @@ dependencies:
   - r-xml2=1.3.2=r40h0357c0b_1
   - r-xtable=1.8_4=r40h6115d3f_3
   - r-zeallot=0.1.0=r40h6115d3f_1002
-  - readline=8.0=he28a2e2_2
+  - readline=8.2
   - sed=4.8=he412f7d_0
