--- a/envs/deseq2_DE.yaml
+++ b/envs/deseq2_DE.yaml
@@ -5,184 +5,182 @@ channels:
   - defaults
   - r
 dependencies:
-  - binutils_impl_linux-64=2.36.1
-  - binutils_linux-64=2.36
-  - bioconductor-annotate=1.70.0
-  - bioconductor-annotationdbi=1.54.0
-  - bioconductor-apeglm=1.14.0
-  - bioconductor-aroma.light=3.22.0
-  - bioconductor-biobase=2.52.0
-  - bioconductor-biocfilecache=2.0.0
-  - bioconductor-biocgenerics=0.38.0
-  - bioconductor-biocio=1.2.0
-  - bioconductor-biocparallel=1.26.0
-  - bioconductor-biomart=2.48.0
-  - bioconductor-biostrings=2.60.0
-  - bioconductor-delayedarray=0.18.0
+  - bioconductor-annotate =1.70.0
+  - bioconductor-annotationdbi =1.54.0
+  - bioconductor-apeglm =1.14.0
+  - bioconductor-aroma.light =3.22.0
+  - bioconductor-biobase =2.52.0
+  - bioconductor-biocfilecache =2.0.0
+  - bioconductor-biocgenerics =0.38.0
+  - bioconductor-biocio =1.2.0
+  - bioconductor-biocparallel =1.26.0
+  - bioconductor-biomart =2.48.0
+  - bioconductor-biostrings =2.60.0
+  - bioconductor-delayedarray =0.18.0
   - bioconductor-deseq2=1.32.0
-  - bioconductor-edaseq=2.26.0
-  - bioconductor-edger=3.34.0
-  - bioconductor-genefilter=1.74.0
-  - bioconductor-geneplotter=1.70.0
-  - bioconductor-genomeinfodb=1.28.0
-  - bioconductor-genomeinfodbdata=1.2.6
-  - bioconductor-genomicalignments=1.28.0
-  - bioconductor-genomicfeatures=1.44.0
-  - bioconductor-genomicranges=1.44.0
-  - bioconductor-iranges=2.26.0
-  - bioconductor-keggrest=1.32.0
-  - bioconductor-limma=3.48.0
-  - bioconductor-matrixgenerics=1.4.0
-  - bioconductor-rhtslib=1.24.0
-  - bioconductor-rsamtools=2.8.0
-  - bioconductor-rtracklayer=1.52.0
-  - bioconductor-ruvseq=1.26.0
-  - bioconductor-s4vectors=0.30.0
-  - bioconductor-shortread=1.50.0
-  - bioconductor-summarizedexperiment=1.22.0
-  - bioconductor-xvector=0.32.0
-  - bioconductor-zlibbioc=1.38.0
-  - pigz=2.6
-  - r-acepack=1.4.1
-  - r-askpass=1.1
-  - r-assertthat=0.2.1
-  - r-backports=1.2.1
-  - r-base=4.1.0
-  - r-base64enc=0.1_3
-  - r-bbmle=1.0.23.1
-  - r-bdsmatrix=1.3_4
-  - r-bh=1.75.0_0
-  - r-biocmanager=1.30.16
-  - r-bit=4.0.4
+  - bioconductor-edaseq =2.26.0
+  - bioconductor-edger =3.34.0
+  - bioconductor-genefilter =1.74.0
+  - bioconductor-geneplotter =1.70.0
+  - bioconductor-genomeinfodb =1.28.0
+  - bioconductor-genomeinfodbdata =1.2.6
+  - bioconductor-genomicalignments =1.28.0
+  - bioconductor-genomicfeatures =1.44.0
+  - bioconductor-genomicranges =1.44.0
+  - bioconductor-iranges =2.26.0
+  - bioconductor-keggrest =1.32.0
+  - bioconductor-limma =3.48.0
+  - bioconductor-matrixgenerics =1.4.0
+  - bioconductor-rhtslib =1.24.0
+  - bioconductor-rsamtools =2.8.0
+  - bioconductor-rtracklayer =1.52.0
+  - bioconductor-ruvseq =1.26.0
+  - bioconductor-s4vectors =0.30.0
+  - bioconductor-shortread =1.50.0
+  - bioconductor-summarizedexperiment =1.22.0
+  - bioconductor-xvector =0.32.0
+  - bioconductor-zlibbioc =1.38.0
+  - pigz =2.6
+  - r-acepack =1.4.1
+  - r-askpass =1.1
+  - r-assertthat =0.2.1
+  - r-backports =1.2.1
+  - r-base =4.1.0
+  - r-base64enc =0.1_3
+  - r-bbmle =1.0.23.1
+  - r-bdsmatrix =1.3_4
+  - r-bh =1.75.0_0
+  - r-biocmanager =1.30.16
+  - r-bit =4.0.4
   - r-bit64=4.0.5
-  - r-bitops=1.0_7
-  - r-blob=1.2.2
-  - r-brio=1.1.2
-  - r-cachem=1.0.5
-  - r-callr=3.7.0
-  - r-catools=1.18.2
-  - r-checkmate=2.0.0
-  - r-cli=3.0.1
-  - r-cluster=2.1.2
-  - r-coda=0.19_4
-  - r-colorspace=2.0_2
-  - r-crayon=1.4.1
-  - r-curl=4.3.2
-  - r-data.table=1.14.0
-  - r-dbi=1.1.1
-  - r-dbplyr=2.1.1
-  - r-desc=1.3.0
-  - r-diffobj=0.3.4
-  - r-digest=0.6.27
-  - r-dplyr=1.0.7
-  - r-ellipsis=0.3.2
-  - r-emdbook=1.3.12
-  - r-evaluate=0.14
-  - r-fansi=0.4.2
-  - r-farver=2.1.0
-  - r-fastmap=1.1.0
-  - r-filelock=1.0.2
-  - r-foreign=0.8_81
-  - r-formatr=1.11
-  - r-formula=1.2_4
-  - r-futile.logger=1.4.3
-  - r-futile.options=1.0.1
-  - r-gdata=2.18.0
-  - r-generics=0.1.0
+  - r-bitops =1.0_7
+  - r-blob =1.2.2
+  - r-brio =1.1.2
+  - r-cachem =1.0.5
+  - r-callr =3.7.0
+  - r-catools =1.18.2
+  - r-checkmate =2.0.0
+  - r-cli =3.0.1
+  - r-cluster =2.1.2
+  - r-coda =0.19_4
+  - r-colorspace =2.0_2
+  - r-crayon =1.4.1
+  - r-curl =4.3.2
+  - r-data.table =1.14.0
+  - r-dbi =1.1.1
+  - r-dbplyr =2.1.1
+  - r-desc =1.3.0
+  - r-diffobj =0.3.4
+  - r-digest =0.6.27
+  - r-dplyr =1.0.7
+  - r-ellipsis =0.3.2
+  - r-emdbook =1.3.12
+  - r-evaluate =0.14
+  - r-fansi =0.4.2
+  - r-farver =2.1.0
+  - r-fastmap =1.1.0
+  - r-filelock =1.0.2
+  - r-foreign =0.8_81
+  - r-formatr =1.11
+  - r-formula =1.2_4
+  - r-futile.logger =1.4.3
+  - r-futile.options =1.0.1
+  - r-gdata =2.18.0
+  - r-generics =0.1.0
   - r-ggplot2=3.3.5
-  - r-ggrepel=0.9.1
-  - r-glue=1.4.2
-  - r-gplots=3.1.1
-  - r-gridextra=2.3
-  - r-gtable=0.3.0
-  - r-gtools=3.9.2
-  - r-highr=0.9
-  - r-hmisc=4.5_0
-  - r-hms=1.1.0
-  - r-htmltable=2.2.1
-  - r-htmltools=0.5.1.1
-  - r-htmlwidgets=1.5.3
-  - r-httr=1.4.2
-  - r-hwriter=1.3.2
-  - r-isoband=0.2.5
-  - r-jpeg=0.1_8.1
-  - r-jsonlite=1.7.2
-  - r-kernsmooth=2.23_20
-  - r-knitr=1.33
-  - r-labeling=0.4.2
-  - r-lambda.r=1.2.4
-  - r-lattice=0.20_44
-  - r-latticeextra=0.6_29
-  - r-lazyeval=0.2.2
-  - r-lifecycle=1.0.0
-  - r-locfit=1.5_9.4
-  - r-magrittr=2.0.1
-  - r-markdown=1.1
-  - r-mass=7.3_54
-  - r-matrix=1.3_4
-  - r-matrixstats=0.60.0
-  - r-memoise=2.0.0
-  - r-mgcv=1.8_36
-  - r-mime=0.11
-  - r-munsell=0.5.0
-  - r-mvtnorm=1.1_2
-  - r-nlme=3.1_152
-  - r-nnet=7.3_16
-  - r-numderiv=2016.8_1.1
-  - r-openssl=1.4.4
-  - r-pillar=1.6.1
-  - r-pkgbuild=1.2.0
-  - r-pkgconfig=2.0.3
-  - r-pkgload=1.2.1
-  - r-plogr=0.2.0
-  - r-plyr=1.8.6
-  - r-png=0.1_7
-  - r-praise=1.0.0
-  - r-prettyunits=1.1.1
-  - r-processx=3.5.2
-  - r-progress=1.2.2
-  - r-ps=1.6.0
-  - r-purrr=0.3.4
+  - r-ggrepel =0.9.1
+  - r-glue =1.4.2
+  - r-gplots =3.1.1
+  - r-gridextra =2.3
+  - r-gtable =0.3.0
+  - r-gtools =3.9.2
+  - r-highr =0.9
+  - r-hmisc =4.5_0
+  - r-hms =1.1.0
+  - r-htmltable =2.2.1
+  - r-htmltools =0.5.1.1
+  - r-htmlwidgets =1.5.3
+  - r-httr =1.4.2
+  - r-hwriter =1.3.2
+  - r-isoband =0.2.5
+  - r-jpeg =0.1_8.1
+  - r-jsonlite =1.7.2
+  - r-kernsmooth =2.23_20
+  - r-knitr =1.33
+  - r-labeling =0.4.2
+  - r-lambda.r =1.2.4
+  - r-lattice =0.20_44
+  - r-latticeextra =0.6_29
+  - r-lazyeval =0.2.2
+  - r-lifecycle =1.0.0
+  - r-locfit =1.5_9.4
+  - r-magrittr =2.0.1
+  - r-markdown =1.1
+  - r-mass =7.3_54
+  - r-matrix =1.3_4
+  - r-matrixstats =0.60.0
+  - r-memoise =2.0.0
+  - r-mgcv =1.8_36
+  - r-mime =0.11
+  - r-munsell =0.5.0
+  - r-mvtnorm =1.1_2
+  - r-nlme =3.1_152
+  - r-nnet =7.3_16
+  - r-numderiv =2016.8_1.1
+  - r-openssl =1.4.4
+  - r-pillar =1.6.1
+  - r-pkgbuild =1.2.0
+  - r-pkgconfig =2.0.3
+  - r-pkgload =1.2.1
+  - r-plogr =0.2.0
+  - r-plyr =1.8.6
+  - r-png =0.1_7
+  - r-praise =1.0.0
+  - r-prettyunits =1.1.1
+  - r-processx =3.5.2
+  - r-progress =1.2.2
+  - r-ps =1.6.0
+  - r-purrr =0.3.4
   - r-r.methodss3=1.8.1
-  - r-r.oo=1.24.0
-  - r-r.utils=2.10.1
+  - r-r.oo =1.24.0
+  - r-r.utils =2.10.1
   - r-r6=2.5.0
-  - r-rappdirs=0.3.3
-  - r-rcolorbrewer=1.1_2
-  - r-rcpp=1.0.7
-  - r-rcpparmadillo=0.10.6.0.0
-  - r-rcppeigen=0.3.3.9.1
-  - r-rcppnumerical=0.4_0
-  - r-rcurl=1.98_1.3
+  - r-rappdirs =0.3.3
+  - r-rcolorbrewer =1.1_2
+  - r-rcpp =1.0.7
+  - r-rcpparmadillo =0.10.6.0.0
+  - r-rcppeigen =0.3.3.9.1
+  - r-rcppnumerical =0.4_0
+  - r-rcurl =1.98_1.3
   - r-rematch2=2.1.2
   - r-reshape2=1.4.4
-  - r-restfulr=0.0.13
-  - r-rjson=0.2.20
-  - r-rlang=0.4.11
-  - r-rpart=4.1_15
-  - r-rprojroot=2.0.2
-  - r-rsqlite=2.2.5
-  - r-rstudioapi=0.13
-  - r-scales=1.1.1
-  - r-snow=0.4_3
-  - r-stringi=1.7.3
-  - r-stringr=1.4.0
-  - r-survival=3.2_11
-  - r-sys=3.4
-  - r-testthat=3.0.4
-  - r-tibble=3.1.3
-  - r-tidyselect=1.1.1
+  - r-restfulr =0.0.13
+  - r-rjson =0.2.20
+  - r-rlang =0.4.11
+  - r-rpart =4.1_15
+  - r-rprojroot =2.0.2
+  - r-rsqlite =2.2.5
+  - r-rstudioapi =0.13
+  - r-scales =1.1.1
+  - r-snow =0.4_3
+  - r-stringi =1.7.3
+  - r-stringr =1.4.0
+  - r-survival =3.2_11
+  - r-sys =3.4
+  - r-testthat =3.0.4
+  - r-tibble =3.1.3
+  - r-tidyselect =1.1.1
   - r-utf8=1.2.2
-  - r-vctrs=0.3.8
-  - r-viridis=0.6.1
-  - r-viridislite=0.4.0
-  - r-waldo=0.2.5
-  - r-withr=2.4.2
-  - r-xfun=0.24
-  - r-xml=3.99_0.6
+  - r-vctrs =0.3.8
+  - r-viridis =0.6.1
+  - r-viridislite =0.4.0
+  - r-waldo =0.2.5
+  - r-withr =2.4.2
+  - r-xfun =0.24
+  - r-xml =3.99_0.6
   - r-xml2=1.3.2
-  - r-xtable=1.8_4
-  - r-yaml=2.2.1
-  - r-zeallot=0.1.0
-  - readline=8.2
-  - sed=4.7
+  - r-xtable =1.8_4
+  - r-yaml =2.2.1
+  - r-zeallot =0.1.0
+  - readline =8.2
+  - sed =4.7
